logs/dag_id=Automate_cleaning/run_id=manual__2024-06-30T09:42:25.382453+00:00/task_id=fetch_raw_data/attempt=1.log
[2024-06-30T09:42:34.292+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data manual__2024-06-30T09:42:25.382453+00:00 [queued]>
[2024-06-30T09:42:34.304+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: Automate_cleaning.fetch_raw_data manual__2024-06-30T09:42:25.382453+00:00 [queued]>
[2024-06-30T09:42:34.305+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:42:34.306+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2024-06-30T09:42:34.306+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2024-06-30T09:42:34.322+0000] {taskinstance.py:1389} INFO - Executing <Task(PythonOperator): fetch_raw_data> on 2024-06-30 09:42:25.382453+00:00
[2024-06-30T09:42:34.328+0000] {standard_task_runner.py:52} INFO - Started process 334 to run task
[2024-06-30T09:42:34.331+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'Automate_cleaning', 'fetch_raw_data', 'manual__2024-06-30T09:42:25.382453+00:00', '--job-id', '26', '--raw', '--subdir', 'DAGS_FOLDER/automate_clean_DAG.py', '--cfg-path', '/tmp/tmpzht82dnv', '--error-file', '/tmp/tmpl5djqlag']
[2024-06-30T09:42:34.333+0000] {standard_task_runner.py:80} INFO - Job 26: Subtask fetch_raw_data
[2024-06-30T09:42:34.414+0000] {task_command.py:371} INFO - Running <TaskInstance: Automate_cleaning.fetch_raw_data manual__2024-06-30T09:42:25.382453+00:00 [running]> on host 3e5e5d011624
[2024-06-30T09:42:34.499+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=devi_nirfana
AIRFLOW_CTX_DAG_ID=Automate_cleaning
AIRFLOW_CTX_TASK_ID=fetch_raw_data
AIRFLOW_CTX_EXECUTION_DATE=2024-06-30T09:42:25.382453+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-06-30T09:42:25.382453+00:00
[2024-06-30T09:42:34.503+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1803, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 719, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/automate_clean_DAG.py", line 60, in fetch_from_postgres
    df = pd.read_sql_query('SELECT * FROM fraud-data-table', conn)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 443, in read_sql_query
    dtype=dtype,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 1579, in read_query
    result = self.execute(*args)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 1424, in execute
    return self.connectable.execution_options().execute(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1279, in execute
    future=False,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1585, in _exec_driver_sql
    distilled_parameters,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1846, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2027, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 207, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1803, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 719, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^

[SQL: SELECT * FROM fraud-data-table]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-06-30T09:42:34.516+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=Automate_cleaning, task_id=fetch_raw_data, execution_date=20240630T094225, start_date=20240630T094234, end_date=20240630T094234
[2024-06-30T09:42:34.530+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 26 for task fetch_raw_data ((psycopg2.errors.SyntaxError) syntax error at or near "-"
LINE 1: SELECT * FROM fraud-data-table
                           ^

[SQL: SELECT * FROM fraud-data-table]
(Background on this error at: https://sqlalche.me/e/14/f405); 334)
[2024-06-30T09:42:34.552+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-06-30T09:42:34.605+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
